test/conformance/chainsaw/generating-policies/foreach/data/data-indexed-resource/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-data-indexed-resource-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-data-indexed-resource-2
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-data-indexed-resource-3
